refactor: Convert path to use Django API paths

--- a/blog/pastrama/templates/pastrama/index.html
+++ b/blog/pastrama/templates/pastrama/index.html
@@ -16,7 +16,7 @@
             <img src="{% static 'pastrama/assets/images/pastrama.png' %}" alt="POSTRAUMA Logo">
         </header>
         <section class="app-container">
-            <form action="/api_tool" method="POST" id="request_form">
+            <form action="pastrama/api" method="POST" id="request_form">
                 <section class="request_control">
                     <fieldset class="">
                         <div class="form_tab environments">
